--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <p>Web Developer</p>
+                <p>Java Full Stack Developer</p>
                 <h1>
                     Hi, I'm <span>Rahul </span><br>From Jharkhand
                 </h1>
@@ -35,11 +35,11 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="IMG_4006.JPG" style="height: 550px;">
+                    <img id="img-abt" src="IMG_4006.JPG" style="height: 550px;">
                 </div>
                 <div class="about-col-2">
                     <h1 class="subtitle">About Me</h1>
-                    <p>I am an MCA graduate and an aspiring web developer, passionate and dedicated to starting my career in the IT industry. Having completed my Master of Computer Applications (MCA) in 2024, I have a strong foundation in HTML, CSS, and JavaScript, enabling me to create visually appealing and functional websites. I am actively seeking an entry-level opportunity where I can apply my technical expertise, grow as a professional, and contribute to innovative projects. My enthusiasm for learning and problem-solving drives me to take on challenges and deliver impactful results. If you're looking for a motivated and committed individual, I am ready to join your team and make a meaningful contribution.</p>
+                    <p>I am an MCA graduate and an aspiring full stack web developer, passionate and dedicated to starting my career in the IT industry. Having completed my Master of Computer Applications (MCA) in 2024, I possess a solid foundation in HTML, CSS, JavaScript, Java, Spring Boot, and React. These skills enable me to build dynamic, responsive, and efficient web applications. I am actively seeking an entry-level opportunity where I can apply my technical expertise, grow as a professional, and contribute to innovative projects. My enthusiasm for learning and problem-solving drives me to take on challenges and deliver impactful results. If you're looking for a motivated and committed individual, I am ready to join your team and make a meaningful contribution.</p>
                         <div class="tab-titles">
                             <p Class="tab-links active-link" onclick="openttab('skills')">Skills</p>
                             <p Class="tab-links " onclick="openttab('experience')">Experience</p>
@@ -135,7 +135,7 @@
             <a href="#" class="btn">See more</a>
         </div>
       </div>
-      <!-- ------------------------------------contact -->  
+      <!-- ------------------------------------contact ----------------------->  
        <div id="contact">
         <div class="container">
             <div class="row">
@@ -209,9 +209,9 @@
             form.reset()
         })
 
-        })
-        .catch(error => console.error('Error!', error.message))
     })
+    .catch(error => console.error('Error!', error.message))
+    
   </script>
 
 </body>
